<resources>
    <string name="app_name">TravelMate</string>

    <!-- Bottom Navbar -->
    <string name="action_settings">Settings</string>
    <string name="search">Cerca</string>
    <string name="journey">Eventi</string>
    <string name="home">Home</string>
    <string name="user">Profilo</string>
    <string name="settings">Opzioni</string>

    <!-- Login & registration -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword"> Conferma Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">CREATE AN ACCOUNT</string>
    <string name="or">Or</string>
    <string name="register">Registration</string>
    <string name="mail">Mail</string>
    <string name="personName">Nome</string>
    <string name="personSurname">Cognome</string>
    <string name="personBio">Biografia</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <!--<string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>-->

    <!-- Home -->
    <string name="home_title">Prossimi eventi</string> <!-- 😎  -->
    <string name="user_logged">LeBron James</string>
    <string name="MORE">MORE</string>
    <string name="n500">500</string>
    <string name="n1010">10/10</string>
    <string name="NYTrip">NY Trip</string>

    <!-- Travel details -->
    <string name="join">Unisciti</string>

    <!-- User details -->
    <string name="partecipant">Partecipante</string>

    <!-- Travel page-->
    <string name="travel_title">I tuoi eventi</string>

    <!-- Search and Trip creation -->
    <string name="search_hint">Search</string>
    <string name="place">Luoghi</string>
    <string name="from">Partenza</string>
    <string name="to">Destinazione</string>
    <string name="date">Data</string>
    <string name="departure">Partenza</string>
    <string name="ret">Ritorno</string>
    <string name="car">Treno/auto</string>
    <string name="car_text">Selezionare il mezzo di trasporto</string>
    <string name="budget">Budget</string>
    <string name="budget_text">Minimo e massimo spendibili nel viaggio</string>
    <string name="n0">0</string>
    <string name="n2">2</string>
    <string name="euro">€</string>
    <string name="buddies">Minimo e massimo dei compagni di viaggio</string>

    <!-- Only creation-->
    <string name="creation_title">Nuovo evento</string>
    <string name="group">Gruppo</string>
    <string name="buddies2">Inserire il numero massimo di partecipanti (min 2, max 15)</string>
    <string name="budget_text2">Specificare il costo approssimativo per il viaggio per ogni utente (min 0, max 500)</string>
    <string name="plan">Programma*</string>
    <string name="plan_text">Scrivi qualche dettaglio in più sul viaggio</string>
    <string name="name">Nome*</string>
    <string name="name_text">Inserisci il nome dell\' evento per concludere</string>
    <string name="confirm">Conferma</string>
    <string name="photo_upload">scegli</string>
    <string name="photo_name">Carica una foto</string>
    <string name="budget2">Budget*</string>
    <string name="car2">Treno/auto*</string>
    <string name="date2">Data*</string>
    <string name="place2">Luoghi*</string>
    <string name="tag_text2">Tipo di evento*</string>

    <!-- Mezzi -->
    <string name="treno">Treno</string>
    <string name="auto">Auto</string>

    <!-- Tag -->
    <string name="tag_text">Tipo di evento</string>
    <string name="tag1">Cultura</string>
    <string name="tag2">Intrattenimento</string>
    <string name="tag3">Musica</string>
    <string name="tag4">Tecnologia</string>

    <!-- Result page-->
    <string name="result_title">Risultati</string>

    <!-- Profile page-->
    <string name="bio">Bio</string>
    <string name="nickname">username</string>
    <string name="age">Anni: </string>
    <string name="gender">Sesso: </string>
    <string name="nazionalità">Nazionalità: </string>
    <string name="lingua">Lingua: </string>
    <string name="occupation">Occupazione: </string>
    <string name="education">Educazione: </string>
    <string name="relationship">Relazione: </string>
    <string name="phone">Telefono: </string>
    <string name="email">Email: </string>

    <!-- Settings -->
    <string name="logout">Logout</string>
    <string name="sofware">PumpkinSoftware</string>
    <string name="version2">Beta 1.0.7</string>
    <string name="version">Versione</string>
    <string name="language">Lingua</string>
    <string name="sounds">Suoni</string>
    <string name="notifications">Notifiche</string>
    <string name="edit_profile">Modifica il profilo</string>
    <string name="rate">Valuta la nostra app</string>
    <string name="contacts">Segnala un bug</string>
    <string name="ourMail">pumpkin.software.italy@gmail.come</string>
    <string name="terms2"><a href="https://pumpkinsoftware.github.io/terms.html">Termini e Condizioni</a> - <a href="https://pumpkinsoftware.github.io/privacy.html">Privacy</a></string>
    <string name="changePass">Cambia password</string>
    <string name="deleteAccount">Elimina account</string>

    <!-- Change pass -->
    <string name="oldPassword">Vecchia password</string>
    <string name="newPassword">Nuova password</string>

    <!-- Travel page -->
    <string name="tab1">In corso</string>
    <string name="tab2">Favoriti</string>
    <string name="tab3">Conclusi</string>

    <!-- Reviews -->
    <string name="review_home">I travel mates da recensire</string>
    <string name="review">Recensione</string>
    <string name="experience">Condividi la tua esperienza per migliorare il servizio</string>
    <string name="q1">Valutazione del viaggio</string>
    <string name="q2">Solidarietà e rispetto</string>
    <string name="q3">Flessibilità e spirito di adattamento</string>
    <string name="q4">Interessi comuni</string>
    <string name="q5">Curiosità</string>
    <string name="r1">1</string>
    <string name="r2">2</string>
    <string name="r3">3</string>
    <string name="r4">4</string>
    <string name="r5">5</string>
    <string name="send">Invia</string>

    <!-- Register -->
    <string name="account">Nuovo account</string>
    <string name="nascita">Data di nascita: </string>
    <string name="uomo">Uomo</string>
    <string name="donna">Donna</string>
    <string name="single">Single</string>
    <string name="fidanzato">Impegnato/a</string>
    <string name="group2">Gruppo*</string>
    <string name="terms">Cliccando su Conferma, accetti le nostre <a href="https://pumpkinsoftware.github.io/terms.html">Condizioni</a> e confermi di aver letto la nostra normativa sulla <a href="https://pumpkinsoftware.github.io/privacy.html">Privacy</a></string>

    <!-- General -->
    <string name="site">pumpkinsoftware.github.io</string>
    <string name="host">travelmateapp.page.link</string>
    <string name="empty">Nessun viaggio da visualizzare</string>
    <string name="emptyChat">Nessuna chat da visualizzare</string>
    <string name="emptyReview">Nessun compagno da visualizzare</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="partecipanti">Partecipanti:</string>
    <string name="organizzatore">Organizzatore:</string>
    <string name="chat">Chat</string>

    <string name="infoApp">Info App</string>

    <string name="notifications_admin_channel_name">Global channel</string>
    <string name="notifications_admin_channel_description">Notifications sent from the app admin</string>




</resources>