<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_viaggi"
        android:icon="@drawable/ic_flight_black_24dp"
        android:title="@string/journey" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/user" />

    <item
        android:id="@+id/nav_opzioni"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />

</menu>