<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/toolbar"
        app:navigationIcon="?attr/homeAsUpIndicator">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/changePass"
            android:textColor="@color/white"
            android:textSize="22sp"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/oldPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:text="@string/oldPassword"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/oldPass2"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/oldPass"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="-10dp"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorPrimary"
        android:textCursorDrawable="@color/colorPrimary" />

    <TextView
        android:id="@+id/newPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oldPass"
        android:layout_alignStart="@+id/oldPass"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:text="@string/newPassword"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newPass2"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/oldPass2"
        android:layout_alignBottom="@+id/newPass"
        android:layout_marginBottom="-10dp"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorPrimary"
        android:textCursorDrawable="@color/colorPrimary" />

    <!-- Button -->
    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/newPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="28dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="327dp"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/cardView"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:paddingEnd="30sp"
            android:text="@string/confirm"
            android:textColor="#fff"
            android:textSize="18sp"
            android:clickable="true">

        </Button>

    </android.support.v7.widget.CardView>

</RelativeLayout>